--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,27 @@
 [package]
 name = "jobworkerp-client"
-version = "0.5.1"
+version = "0.5.2"
 authors = ["sutr-app"]
 edition = "2021"
 
+[[bin]]
+name = "jobworkerp-client"
+path = "src/bin/command.rs"
+
 [dependencies]
+
 anyhow = "1"
+chrono = { version = "0.4", features = ["serde"] }
+clap = { version = "4.5", features = ["derive"] }
+command-utils = { git = "https://github.com/sutr-app/command-utils.git", branch = "main" }
+infra-utils = { git = "https://github.com/sutr-app/infra-utils.git", branch = "main" }
+once_cell = "1"
 prost = "0.13"
 prost-types = "0.13"
+prost-reflect = { version = "0.14", features = ["serde"] }
+prost-reflect-build = "0.14"
+serde = { version = "1", features = ["derive"] }
+serde_json = { version = "1" }
 tonic = { version = "0.12" }
 tokio = { version = "1", features = ["full"] }
 
