--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
 tonic = { version = "0.12" }
 tokio = { version = "1", features = ["full"] }
+tracing = "0.1"
+tracing-subscriber = "0.3"
 
 [build-dependencies]
 tonic-build = { version = "0.12", features = ["prost"] }
