--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
 tonic = { version = "0.12" }
 tokio = { version = "1", features = ["full"] }
+tokio-stream ="0.1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 
