--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,9 +21,9 @@ prost-reflect = { version = "0.14", features = ["serde"] }
 prost-reflect-build = "0.14"
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
-tonic = { version = "0.12" }
+tonic = { version = "0.12", features = ["tls", "tls-webpki-roots"] }
 tokio = { version = "1", features = ["full"] }
-tokio-stream ="0.1"
+tokio-stream = "0.1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 
