--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,12 @@ prost = "0.13"
 prost-types = "0.13"
 prost-reflect = { version = "0.14", features = ["serde"] }
 prost-reflect-build = "0.14"
+#rustls = { version = "0.23", default-features = false, features = [
+#    "ring",
+#    "logging",
+#    "std",
+#    "tls12",
+#] }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
 tonic = { version = "0.12", features = ["tls", "tls-webpki-roots"] }
