--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "jobworkerp-client"
-version = "0.9.0"
+version = "0.10.0"
 authors = ["sutr-app"]
-edition = "2021"
+edition = "2024"
 
 [[bin]]
 name = "jobworkerp-client"
@@ -30,11 +30,11 @@ rustls = { version = "0.23", default-features = false, features = [
 rand = "0.9"
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
-tonic = { version = "0.12", features = ["tls", "tls-webpki-roots"] }
+tonic = { version = "0.13", features = ["tls-ring", "tls-webpki-roots"] }
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 
 [build-dependencies]
-tonic-build = { version = "0.12", features = ["prost"] }
+tonic-build = { version = "0.13", features = ["prost"] }
