--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ rustls = { version = "0.23", default-features = false, features = [
     "tls12",
 ] }
 rand = "0.9"
+schemars = { version = "0.8", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
 tonic = { version = "0.13", features = ["tls-ring", "tls-webpki-roots"] }
