--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ rustls = { version = "0.23", default-features = false, features = [
     "tls12",
 ] }
 rand = "0.9"
-schemars = { version = "0.8", features = ["derive"] }
+schemars = { version = "1.0.0-alpha.17", features = ["chrono04"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
 thiserror = { version = "2" }
