--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,11 @@ anyhow = "1"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.5", features = ["derive"] }
 command-utils = { git = "https://github.com/sutr-app/command-utils.git", branch = "main" }
+infra-utils = { git = "https://github.com/sutr-app/infra-utils.git", branch = "main" }
 dotenvy = { version = "0.15" }
 futures = "0.3"
 once_cell = "1"
+opentelemetry = { version = "0.29" }
 prost = "0.13"
 prost-types = "0.13"
 prost-reflect = { version = "0.15", features = ["serde"] }
