add visual display

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,11 @@ path = "src/bin/command.rs"
 [dependencies]
 
 anyhow = "1"
+atty = "0.2"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.5", features = ["derive"] }
+comfy-table = "7.1"
+yansi = "1.0"
 command-utils = { git = "https://github.com/sutr-app/command-utils.git", branch = "main" }
 infra-utils = { git = "https://github.com/sutr-app/infra-utils.git", branch = "main" }
 dotenvy = { version = "0.15" }
