--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,10 +24,10 @@ dotenvy = { version = "0.15" }
 futures = "0.3"
 once_cell = "1"
 opentelemetry = { version = "0.30" }
-prost = "0.13"
-prost-types = "0.13"
-prost-reflect = { version = "0.15", features = ["serde"] }
-prost-reflect-build = "0.15"
+prost = "0.14"
+prost-types = "0.14"
+prost-reflect = { version = "0.16", features = ["serde"] }
+prost-reflect-build = "0.16"
 # force ring. ref. https://github.com/rustls/rustls/issues/1938
 rustls = { version = "0.23", default-features = false, features = [
     "ring",
@@ -40,7 +40,7 @@ schemars = { version = "1.0.2", features = ["chrono04"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
 thiserror = { version = "2" }
-tonic = { version = "0.13", features = ["tls-ring", "tls-webpki-roots"] }
+tonic = { version = "0.14", features = ["tls-ring", "tls-webpki-roots"] }
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
 tracing = "0.1"
@@ -48,4 +48,4 @@ tracing-subscriber = "0.3"
 uuid = { version = "1", features = ["v4", "v7"] }
 
 [build-dependencies]
-tonic-build = { version = "0.13", features = ["prost"] }
+tonic-prost-build = { version = "0.14" }
